<resources>
    <string name="app_name">QNBleDemo</string>
        <string name="scan">Scan </string>
        <string name="stop">Stop Scan</string>
        <string name="user_id_explain">Set the user data for whom you want to calculate the body fat rate </string>
        <string name="user_gender_explain">Male is "men" and the female is "woman"</string>
        <string name="user_height_explain">Unit is cm. The range is 40~240cm</string>
        <string name="user_birthday_explain">Only supports children above 10 years old and adults under 80 years old. For those under 10 years old, only weight and BMI data are valid </string>
        <string name="ble_scan_explain">When "First Time" is selected, each device will only return once for a single scan. When "Every Time" is selected, a single scan of each device may be called back multiple times, but the signal strength will be different</string>
        <string name="user_unit_explain">kg default value \nlb pounds, all scales can support this unit \n kg, if the scale end does not support, it will display kg\nst stone, if the scale end does not support will display lb </string>
        <string name="cancel">Cancel</string>
        <string name="sure">OK</string>
        <string name="RegisterViewController_women">Female </string>
        <string name="RegisterViewController_man">Male </string>
        <string name="RegisterViewController_lowAge10">Your age is less than 10 years old, you can not get accurate measurement data when testing</string>
        <string name="date_format_day">yyyy-MM-dd</string>
        <string name="register_ok">OK</string>
        <string name="scan_out_time_remind"> After setting the time, if no Bluetooth device is scanned within the specified time, the error message will be returned </string>
        <string name="scan_time_remind">Scan duration unit is ms, the default is 0, that is, the scan is always performed, unless the APP calls stopBleDeviceDiscovery. If it is not 0, the minimum value is 3000ms, it will delay the time after the duration ms, automatically Stop scanning. </string>
    <string name="setting">Setting</string>
    <string name="each">Each</string>
    <string name="lb">lb</string>
    <string name="_172cm">172cm</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="user_id">User id</string>
    <string name="_123456789">123456789</string>
    <string name="user_info">User Settings</string>
    <string name="male">Male</string>
    <string name="calculation_mode">Calculation mode</string>
    <string name="normal">Normal</string>
    <string name="athlete">Athlete</string>
    <string name="jin">jin</string>
    <string name="st">st</string>
    <string name="determine">Scan</string>
    <string name="system_scan">System scan</string>
    <string name="kg">kg</string>
    <string name="_10000">10000</string>
    <string name="_6000">6000</string>
    <string name="scan_timeout_ms">Scan timeout（ms）</string>
    <string name="scan_time_ms">Scan time（ms）</string>
    <string name="bluetooth_related_settings">Bluetooth related settings</string>
    <string name="scan_mode">Scan mode</string>
    <string name="athlete_mode_for_regular_sports_users">Athlete mode for regular sports users</string>
    <string name="first">first</string>
    <string name="_0">0</string>
    <string name="connection_timeout_ms">Connection timeout（ms）</string>
    <string name="weight_unit">Weight unit</string>
    <string name="height">Height</string>
    <string name="birthday">Birthday</string>
    <string name="userid">UserId :</string>
</resources>
