<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="20sp"/>

        <TextView

            style="@style/user_big_text"
            android:layout_marginTop="30dp"
            android:text="@string/user_info" />

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_name_explain"
                    style="@style/user_small_text"
                    android:layout_width="match_parent"
                    android:layout_gravity="top|bottom"
                    android:layout_weight="2"
                    android:text="@string/user_id" />


                <EditText
                    android:id="@+id/user_id_edt"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"

                    android:layout_gravity="top|bottom"

                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:inputType="phone"
                    android:labelFor="@+id/User_Id"
                    android:text="@string/_123456789" />
            </LinearLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/user_id_explain" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_gender_explain"
                    style="@style/user_small_text"
                    android:layout_gravity="top|bottom"

                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/user_gender_grp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/user_male_rb"
                        style="@style/user_radio_button"
                        android:layout_gravity="top|bottom"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/user_female_rb"
                        style="@style/user_radio_button"
                        android:layout_marginStart="10dp"
                        android:text="@string/female" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/user_gender_explain" />
        </LinearLayout>

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_calc_explain"
                    style="@style/user_small_text"

                    android:text="@string/calculation_mode" />

                <RadioGroup
                    android:id="@+id/user_calc_grp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/normal_calc_rb"
                        style="@style/user_radio_button"
                        android:checked="true"
                        android:text="@string/normal" />

                    <RadioButton
                        android:id="@+id/athlete_calc_rb"
                        style="@style/user_radio_button"
                        android:layout_marginStart="10dp"
                        android:text="@string/athlete" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/athlete_mode_for_regular_sports_users"/>
        </LinearLayout>

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_height_explain"
                    style="@style/user_small_text"
                    android:layout_weight="1"
                    android:text="@string/height" />

                <TextView
                    android:id="@+id/user_height_tv"
                    style="@style/user_small_text"

                    android:layout_weight="1"
                    android:text="@string/_172cm" />

            </LinearLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/user_height_explain"/>
        </LinearLayout>

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_birthday_explain"
                    style="@style/user_small_text"
                    android:layout_weight="1"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/user_birthday_tv"
                    style="@style/user_small_text"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/user_birthday_explain"/>
        </LinearLayout>

        <TextView
            style="@style/user_big_text"
            android:layout_marginTop="30dp"
            android:text="@string/bluetooth_related_settings"/>

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ble_scan_explain"
                    style="@style/user_small_text"
                    android:text="@string/scan_mode"/>

                <RadioGroup
                    android:id="@+id/ble_scan_grp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ble_scan_first_time"
                        style="@style/user_radio_button"
                        android:checked="true"
                        android:text="@string/first"/>

                    <RadioButton
                        android:id="@+id/ble_scan_every_time"
                        style="@style/user_radio_button"
                        android:layout_marginStart="10dp"
                        android:text="@string/each"/>
                </RadioGroup>

            </RelativeLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/ble_scan_explain"/>
        </LinearLayout>

        <TextView style="@style/divide_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/scan_timeTv"
                    style="@style/user_small_text"
                    android:text="@string/scan_time_ms"/>


            </RelativeLayout>

            <EditText
                android:id="@+id/scan_timeEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/scan_time_remind"
                android:inputType="number"
                android:text="@string/_0"/>

            <TextView style="@style/divide_line"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/scan_out_timeTv"
                    style="@style/user_small_text"
                    android:text="@string/scan_timeout_ms"/>


            </RelativeLayout>

            <EditText
                android:id="@+id/scan_out_timeEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/scan_out_time_remind"
                android:inputType="number"
                android:text="@string/_6000"/>

            <TextView style="@style/divide_line"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/connect_out_timeTv"
                    style="@style/user_small_text"
                    android:text="@string/connection_timeout_ms"/>


            </RelativeLayout>

            <EditText
                android:id="@+id/connect_out_timeEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/scan_out_time_remind"
                android:inputType="number"
                android:text="@string/_10000"/>

            <TextView style="@style/divide_line"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_unit_explain"
                    style="@style/user_small_text"

                    android:text="@string/weight_unit" />

                <RadioGroup
                    android:id="@+id/user_unit_grp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/user_unit_kg"
                        style="@style/user_radio_button"
                        android:checked="true"
                        android:text="@string/kg" />

                    <RadioButton
                        android:id="@+id/user_unit_lb"
                        style="@style/user_radio_button"
                        android:layout_marginStart="4dp"
                        android:text="@string/lb" />

                    <RadioButton
                        android:id="@+id/user_unit_jin"
                        style="@style/user_radio_button"
                        android:layout_marginStart="4dp"
                        android:text="@string/jin" />

                    <RadioButton
                        android:id="@+id/user_unit_st"
                        style="@style/user_radio_button"
                        android:layout_marginStart="4dp"
                        android:text="@string/st" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/user_explain_text"
                android:text="@string/user_unit_explain" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/determine"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_system_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:gravity="center"
                android:text="@string/system_scan"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>